--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "webpack-react-typescript",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  }
 }
